--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,68 @@
 body {
   background-color: #60d9f1;
+  font-family: sans-serif;
 }
 .container{
+  display: flex;
+  margin: 0;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+audio{
+  width:600px;
+}
+
+h1{
+
+}
+
+img{
+  width: 100%;
+}
+
+.results{
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 90%;
 }
 
-audio{
-  width:600px;
+.resultWrapper{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+.song{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 15%;
+  background-color: lightgray;
+  margin: 1%;
+  font-size: 14px;
+  text-align: center;
+}
+
+.track{
+}
+
+.band{
+
+}
+
+hr{
+  width: 80%;
+  border-style: solid;
+}
+
+#first{
+  border-color: darkgray;
+}
+
+#second{
+  border-color: lightgray;
 }
