I styled the page with some color and a good background image  Also I added a pretty awesome hover effect using the cubic bezier trick in google dev tools

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,12 @@
 body {
-  background-color: #60d9f1;
+  background-color: #520054;
   font-family: sans-serif;
+  color: #C391F2;
+  background-image: url(https://www.walldevil.com/wallpapers/a85/wallpapers-adventure-desktop-wallpaper-aventuras-princess-images-lumpy-space.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position:50% 70%;
 }
 .container{
   display: flex;
@@ -19,7 +25,8 @@ h1{
 }
 
 img{
-  width: 100%;
+  width: 90%;
+  margin: 10px;
 }
 
 .results{
@@ -37,15 +44,30 @@ img{
 
 
 .song{
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 15%;
-  background-color: lightgray;
+  background-color: #BA6DCB;
   margin: 1%;
   font-size: 14px;
   text-align: center;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+  transition: all 0.3s cubic-bezier(0.42, 0, 0.68, 2.94);
 }
+
+
+
+.song:hover {
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  transform: scale(1.1, 1.1);
+}
+
+.song:hover::after {
+  opacity: 1;
+}
+
 
 .track{
 }
@@ -65,4 +87,8 @@ hr{
 
 #second{
   border-color: lightgray;
+}
+
+p{
+  color: #8A00D9;
 }
